--- a/CSS/main.css
+++ b/CSS/main.css
@@ -383,7 +383,7 @@ h1{
     color: rgb(0, 0, 0);
     font-weight: bold;
     z-index: 20;
- 
+
 }
 
 
@@ -824,11 +824,14 @@ h1{
 
         border-color: chartreuse;
         transform: scale(1.1);
+        z-index: 30;
+ 
     }
     .contenedor__ModelosInvierno:hover{
 
         border-color: chartreuse;
         transform: scale(1.1);
+        z-index: 30;
 
     }
     .row-yeze-3 img:hover{
